Add Quranic Sciences

--- a/thesis/SA - Quran.lyx
+++ b/thesis/SA - Quran.lyx
@@ -1065,6 +1065,1331 @@ _
 \end_layout
 
 \begin_layout Section
+Qur'anic Sciences
+\end_layout
+
+\begin_layout Standard
+These sciences hanging the Qur'an as a subject for study to illustrate and
+ explore its secrets, some books are found under different names such as
+ Revelation Science
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+علم التنزيل
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+ and Book Science
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+
+\family roman
+\series medium
+\shape up
+\size normal
+\emph off
+\bar no
+\strikeout off
+\uuline off
+\uwave off
+\noun off
+\color none
+ 
+\family default
+\series default
+\shape default
+\size default
+\emph default
+\bar default
+\strikeout default
+\uuline default
+\uwave default
+\noun default
+\color inherit
+\lang arabic_arabi
+علم الكتاب
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, we can classify them in two categories
+\begin_inset Note Note
+status collapsed
+
+\begin_layout Plain Layout
+
+\lang arabic_arabi
+[الطّيّار, 08]
+\end_layout
+
+\end_inset
+
+:
+\end_layout
+
+\begin_layout Enumerate
+Sciences originally coming from the Qur'an: we can not use them to study
+ other things except the Qur'an such as knowledge of Meccan and Medinan
+ ayahs, the causes of revelation, etc.
+\end_layout
+
+\begin_layout Enumerate
+Common sciences between the Qur'an and other sciences: they are the sciences
+ that arise from the fact that the Qur'an can be seen in two different ways :
+ 
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+If seen as a text written in Arabic, Arab linguists can study it as well
+ in terms of expression
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+الإعراب
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, conjugation
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+الصّرف
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, rhetoric
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+البلاغة
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, lexicology
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+علم المعاجم
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, etc.
+ Should be noted here that the Qur'an was the primary reason for the emergence
+ of the sciences of Arabic language, since the Arabs did not take care of
+ their own language until the arrival of Islam.
+ Note also that this kind of science is wider in the books of Arabic language
+ than in books of Sciences of the Qur'an, because sciences the Qur'an took
+ only what they need to.
+ 
+\end_layout
+
+\begin_layout Enumerate
+If seen as a legislative text, then this characteristic is shared with the
+ Sunnah, it has produced a number of sciences such as the Fiqh
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+الفقه
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, the abrogating and the abrogated
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+النّاسخ والمنسوخ
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, the general and the particular
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+الخاصّ و العامّ
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, etc.
+ 
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+Qur'anic science are so vast than we can browse all its branches, so we'll
+ rely on what is supposed to help us in our work:
+\end_layout
+
+\begin_layout Subsection
+
+\series bold
+Knowledge of Ayahs revelation places
+\series default
+ 
+\end_layout
+
+\begin_layout Standard
+There are many definitions to distinguish between what is Meccan and what
+ is Medinan, but the best known definition is as follows : 
+\end_layout
+
+\begin_layout Itemize
+The Meccan is all that was revealed before the migration of the prophet
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+الهجرة النبوية
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, even if it is revealed in Medina, and Medinan is all that was revealed
+ after the migration, even if it is revealed in Mecca.
+ 
+\end_layout
+
+\begin_layout Itemize
+The Meccan surahs are among 82 surahs, and Medinan are 20 surahs, while
+ the remaining 12 surahs are raised for the divergence, the Meccan and Medinan
+ ayas have characteristics that distinguish them from each other
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+[Dr.
+ MAHDI, 09]
+\end_layout
+
+\end_inset
+
+ : 
+\end_layout
+
+\begin_layout Itemize
+The characteristics of Meccans, Any Surah contains : 
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+A prostration of recitation
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+سجود التّلاوة
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+; 
+\end_layout
+
+\begin_layout Itemize
+The word 
+\begin_inset Quotes sld
+\end_inset
+
+Nay!
+\begin_inset Quotes srd
+\end_inset
+
+ (kallā 
+\lang arabic_arabi
+كلّا
+\lang english
+), there are 33 occurrences of this word in the Qur'an;
+\end_layout
+
+\begin_layout Itemize
+The term 
+\begin_inset Quotes sld
+\end_inset
+
+O people 
+\lang arabic_arabi
+ يَا أَيُّهَا النّاسُ 
+\lang english
+ 
+\begin_inset Quotes srd
+\end_inset
+
+ ; 
+\end_layout
+
+\begin_layout Itemize
+Stories of the Prophets and the past communities , except in the case of
+ Surah the Cow
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+البقرة
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+; 
+\end_layout
+
+\begin_layout Itemize
+The stories of Adam and Satan, except once again, Surah the Cow  ; 
+\end_layout
+
+\begin_layout Itemize
+The detached alphabetical letters such as Alif-Lam-Mim (
+\lang arabic_arabi
+ا ل م
+\lang english
+) and Ha-Mim (
+\lang arabic_arabi
+ح م
+\lang english
+), except Surah the Cow and al-'Imrān 
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+آل عمران
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+.
+ 
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+The characteristics of Medinans: Any Surah contains : 
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+An obligation ; 
+\end_layout
+
+\begin_layout Itemize
+A legal punishment ; 
+\end_layout
+
+\begin_layout Itemize
+Ayahs talking about hypocrisy ; 
+\end_layout
+
+\begin_layout Itemize
+Dialogue with Jews and Christians (People of the book
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+أهل الكتاب
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+) ; 
+\end_layout
+
+\begin_layout Itemize
+« O believers … » [
+\lang arabic_arabi
+يَا أَيُّهَا الَّذِينَ آمَنُوا
+\lang english
+] ; 
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+The importance of knowing the Meccans and the Medinans :  
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Knowledge of the abrogating and the abrogated
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+النّاسخ و المنسوخ
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+.
+  
+\end_layout
+
+\begin_layout Itemize
+Mastering the history of Islamic legislation and juridical purpose by sorting
+ the branches with their foundations, using principles of reflection and
+ psychology to deliver legal consultations reliably.
+ This helps the acceptance of preaching and Islamic laws by peoples newly
+ converted to Islam.
+ 
+\end_layout
+
+\begin_layout Itemize
+The explanation of the Qur'an and understanding of its teachings.
+ 
+\end_layout
+
+\begin_layout Itemize
+The discovery of various Qur'anic styles and their use in Islamic preaching
+ .
+  
+\end_layout
+
+\begin_layout Itemize
+Knowledge of the prophet's biography through the Qur'anic verses.
+ 
+\end_layout
+
+\end_deeper
+\begin_layout Subsection
+Knowledge of Ayahs revelation causes: 
+\end_layout
+
+\begin_layout Standard
+The importance of this science is evident in the ayas concerning specific
+ moments of the prophet's life, eg : [
+\lang arabic_arabi
+وَلِلَّهِ الْمَشْرِقُ وَالْمَغْرِبُ فَأَيْنَمَا تُوَلُّوا فَثَمَّ وَجْهُ
+ اللَّهِ
+\lang english
+].
+ If we try to understand literally, people will say it is not required to
+ move towards the Qiblah, which is obviously wrong.
+ So we can not grasp the meaning of the ayah only if we know the cause of
+ revelation.
+ 
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+[الزّركشي, --]
+\end_layout
+
+\end_inset
+
+ 
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Knowledge of conjugation
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+التّصريف
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+: 
+\end_layout
+
+\begin_layout Standard
+This science considers the structure of words, it is divided into two parts:
+ 
+\end_layout
+
+\begin_layout Enumerate
+Put the word in various modes such as the infinitive
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+
+\family roman
+\series medium
+\shape up
+\size normal
+\emph off
+\bar no
+\strikeout off
+\uuline off
+\uwave off
+\noun off
+\color none
+ 
+\family default
+\series default
+\shape default
+\size default
+\emph default
+\bar default
+\strikeout default
+\uuline default
+\uwave default
+\noun default
+\color inherit
+\lang arabic_arabi
+المصدر
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, active participle
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+اسم الفاعل
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, passive participle
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+اسم المفعول
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, etc.
+\end_layout
+
+\begin_layout Enumerate
+Changing a word to express a particular meaning such as the expansion
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+الزّيادة
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, the inversion
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+القلب
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, the diphthong
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+الإدغام
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, etc.
+ 
+\end_layout
+
+\begin_layout Standard
+Knowing the conjugation is essential to understand the meaning of the aya
+ because sometimes we do not understand ambiguous words only with conjugation,
+ for example: [
+\lang arabic_arabi
+وَأَمَّا الْقَاسِطُونَ فَكَانُوا لِجَهَنَّمَ حَطَباً
+\lang english
+] and [
+\lang arabic_arabi
+وَأَقْسِطُوا إِنَّ اللَّهَ يُحِبُّ الْمُقْسِطِين
+\lang english
+َ], one can really see how the meaning has changed by the conjugation from
+ Equitables (
+\lang arabic_arabi
+المقسطون
+\lang english
+) to Inequitables (
+\lang arabic_arabi
+القاسطون
+\lang english
+).
+ 
+\lang arabic_arabi
+
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+
+\lang arabic_arabi
+[الزّركشي, --]
+\end_layout
+
+\end_inset
+
+
+\lang english
+ 
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Knowledge of orthography
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+
+\family roman
+\series bold
+\shape up
+\size large
+\emph off
+\bar no
+\strikeout off
+\uuline off
+\uwave off
+\noun off
+\color none
+ 
+\family default
+\series default
+\shape default
+\size default
+\emph default
+\bar default
+\strikeout default
+\uuline default
+\uwave default
+\noun default
+\color inherit
+\lang arabic_arabi
+علم مرسوم الخطّ 
+\family roman
+\series bold
+\shape up
+\size large
+\emph off
+\bar no
+\strikeout off
+\uuline off
+\uwave off
+\noun off
+\color none
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+: 
+\end_layout
+
+\begin_layout Standard
+When the companions wrote the Qur'an at the time of Uthman, they have diverged
+ in writing of the word 
+\begin_inset Quotes sld
+\end_inset
+
+
+\lang arabic_arabi
+التابوت
+\lang english
+
+\begin_inset Quotes srd
+\end_inset
+
+(coffin) in Mus'haf.
+ Zaid said "
+\lang arabic_arabi
+التابوه
+\lang english
+", but Quraish
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+قريش
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+said "
+\lang arabic_arabi
+التابوت
+\lang english
+".
+ So they asked the opinion of Uthman who said write it 
+\begin_inset Quotes sld
+\end_inset
+
+
+\lang arabic_arabi
+التابوت
+\lang english
+
+\begin_inset Quotes srd
+\end_inset
+
+ because the Qur'an was revealed with the dialect (language) of Quraish.
+ 
+\end_layout
+
+\begin_layout Standard
+In fact, Qur'anic writing is fixed, Abdullah ibn Droustouīh
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+عبد الله ابن درستويه
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+said that in the Arabic language there are two calligraphies unable to be
+ judged: the script of Mus'haf and the script of Prosody
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+تقطيع العروض
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+, So it is not permitted to write the mushaf with another script but Uthmani
+ because the differences of this script are done intentionally, we give
+ below some examples
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+ [الزّركشي, --]
+\end_layout
+
+\end_inset
+
+  :
+\end_layout
+
+\begin_layout Itemize
+Addition of Alif (
+\lang arabic_arabi
+أَلِف
+\lang english
+) : such as Alif in [
+\lang arabic_arabi
+كَأَمْثَالِ الْلُؤْلُؤِا
+\lang english
+], but not in [
+\lang arabic_arabi
+كَأَنَّهُمْ لُؤْلُؤٌ
+\lang english
+] ;
+\end_layout
+
+\begin_layout Itemize
+Addition of Wāw (
+\lang arabic_arabi
+واو
+\lang english
+) : such as [
+\lang arabic_arabi
+سَأوُرِيكُمْ آيَاتِي
+\lang english
+] ; 
+\end_layout
+
+\begin_layout Itemize
+Addition of Yā’ (
+\lang arabic_arabi
+ياء
+\lang english
+) : like in [
+\lang arabic_arabi
+وَالسَّمَاءَ بَنَيْنَاهَا بِأَيْيدٍ
+\lang english
+] ; 
+\end_layout
+
+\begin_layout Itemize
+Removal of Alif : such as [
+\lang arabic_arabi
+بِسْمِ اللَّهِ 
+\lang english
+], but not in [
+\lang arabic_arabi
+بِاسْمِ رَبِّكَ
+\lang english
+] ; 
+\end_layout
+
+\begin_layout Itemize
+Removal of Wāw : such as [
+\lang arabic_arabi
+وَيَمْحُ اللَّهُ الْبَاطِل
+\lang english
+َ], but not in [
+\lang arabic_arabi
+يَمْحُوا اللَّهُ مَا يَشَاء
+\lang english
+ُ]; 
+\end_layout
+
+\begin_layout Itemize
+Removal of Yā’ : such as [
+\lang arabic_arabi
+فَلا تَسْأَلْنِ مَا لَيْسَ لَكَ بِهِ عِلْمٌ
+\lang english
+], but not in [
+\lang arabic_arabi
+فَلا تَسْأَلْنِي عَنْ شَيْءٍ حَتَّى أُحْدِثَ لَكَ مِنْهُ ذِكْراً
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Diphthong
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+الإدغام
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+: such as [
+\lang arabic_arabi
+فَإِلَّمْ يَسْتَجِيبُوا لَكُمْ
+\lang english
+] and [
+\lang arabic_arabi
+فَإِنْ لَمْ يَسْتَجِيبُوا لَكَ
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Close letters: such as Sīn and Sâd in: [
+\lang arabic_arabi
+وَزَادَكُمْ فِي الْخَلْقِ بَصطَةً
+\lang english
+] and [
+\lang arabic_arabi
+وَزَادَهُ بَسْطَةً فِي الْعِلْمِ وَالْجِسْمِ
+\lang english
+].
+ 
+\end_layout
+
+\begin_layout Subsection
+Grammatical analysis of the Qur'an
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+إعراب ألفاظ القرآن
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+: 
+\end_layout
+
+\begin_layout Standard
+The prophet has said :« Analyze the Qur'an and Get its oddities »
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+ «
+\lang arabic_arabi
+ أعربوا القرآن والتمسوا غرائبه
+\lang english
+ » – 
+\lang arabic_arabi
+رواه البيهقي والحاكم عن أبي هريرة
+\lang english
+ – 
+\end_layout
+
+\end_inset
+
+.
+ Analyzing here means the knowledge of the meaning of words.
+ there are even who have analyzed grammatically the entire Qur'an word by
+ word.
+ 
+\lang arabic_arabi
+
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+
+\lang arabic_arabi
+[الزّركشي, --]
+\end_layout
+
+\end_inset
+
+
+\lang english
+ 
+\end_layout
+
+\begin_layout Subsection
+Science of allegorical
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+علم المتشابه
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+:
+\end_layout
+
+\begin_layout Standard
+Allegorical ayahs are those ayahs mentioned with the same meaning but in
+ different forms and words repeated several times, as in the following examples
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+[الزّركشي, --]
+\end_layout
+
+\end_inset
+
+ : 
+\end_layout
+
+\begin_layout Itemize
+Reversing : like [
+\lang arabic_arabi
+وَالنَّصَارَى وَالصَّابِئِينَ
+\lang english
+] and [
+\lang arabic_arabi
+وَالصَّابِئِينَ وَالنَّصَارَى
+\lang english
+] ; 
+\end_layout
+
+\begin_layout Itemize
+Increases and decreases : like [
+\lang arabic_arabi
+فَأْتُوا بِسُورَةٍ مِّنْ مِثْلِهِ
+\lang english
+] and [
+\lang arabic_arabi
+فَأْتُوا بِسُورَةٍ مِثْله
+\lang english
+] ; 
+\end_layout
+
+\begin_layout Itemize
+Definition and in-definition
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+التّعريف والتّنكير
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+: like [
+\lang arabic_arabi
+وَيَقْتُلُونَ النَّبِيِّينَ بِغَيْرِ الْحَق
+\lang english
+] and [
+\lang arabic_arabi
+وَيَقْتُلُونَ النَّبِيِّينَ بِغَيْرِ حَقِّ
+\lang english
+] ; 
+\end_layout
+
+\begin_layout Itemize
+Singular and plural: like [
+\lang arabic_arabi
+لَنْ تَمَسَّنَا النَّارُ إِلاَّ أَيَّاماً مَعْدُودَاتٍ
+\lang english
+] and [
+\lang arabic_arabi
+لَنْ تَمَسَّنَا النَّارُ إِلاَّ أَيَّاماً مَعْدُودَةً
+\lang english
+] ; 
+\end_layout
+
+\begin_layout Itemize
+Substitution of prepositions : like [
+\lang arabic_arabi
+وَمَا أُنْزِلَ إِلَيْنَا
+\lang english
+] and [
+\lang arabic_arabi
+وَمَا أُنْزِلَ عَلَيْنَا
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Substitutions of words : like [
+\lang arabic_arabi
+مَا أَلْفَيْنَا عَلَيْهِ آبَاءَنَا
+\lang english
+] and [
+\lang arabic_arabi
+مَا وَجَدْنَا عَلَيْهِ آبَاءَنَا
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Literal Repetition : such as [
+\lang arabic_arabi
+إِنَّ فِي ذَلِكَ لآيَةً
+\lang english
+] which repeated 20 times in Qur'an.
+\end_layout
+
+\begin_layout Subsection
+The beginnings of surahs
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+فواتح السّور
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+: 
+\end_layout
+
+\begin_layout Standard
+The Qur'an contains 114 chapters, each one begins with one of the following
+ ten different types
+\begin_inset Note Note
+status collapsed
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+[الزّركشي, --] 
+\end_layout
+
+\end_inset
+
+ : 
+\end_layout
+
+\begin_layout Itemize
+Appreciation of Allah  : [
+\lang arabic_arabi
+الْحَمْدُ لِلَّهِ
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Alphabetical letters : [
+\lang arabic_arabi
+كهيعص
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Call: [
+\lang arabic_arabi
+يَا أَيُّهَا الَّذِينَ آمَنُوا
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Oath: [
+\lang arabic_arabi
+وَالنَّازِعَاتِ
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Narrative sentence : [
+\lang arabic_arabi
+أَتَى أَمْرُ اللَّهِ
+\lang english
+] ; 
+\end_layout
+
+\begin_layout Itemize
+Condition : [
+\lang arabic_arabi
+إِذَا جَاءَ نَصْرُ اللَّهِ
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Command : [
+\lang arabic_arabi
+اقْرَأْ بِاسْمِ رَبِّكَ
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Interrogation : [
+\lang arabic_arabi
+عَمَّ يَتَسَاءَلُون
+\lang english
+] ; 
+\end_layout
+
+\begin_layout Itemize
+Prayer: [
+\lang arabic_arabi
+وَيْلٌ لِلْمُطَفِّفِينَ
+\lang english
+]; 
+\end_layout
+
+\begin_layout Itemize
+Justification (only one time) : [
+\lang arabic_arabi
+لإِيلافِ قُرَيْش
+\lang english
+ٍ].
+ 
+\end_layout
+
+\begin_layout Subsection
+Knowledge of Qur'anic Parables
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+الأمثال القرآنية
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+:
+\end_layout
+
+\begin_layout Standard
+This science is important because there are several ayas which are illuminated
+ through parables such as : [
+\lang arabic_arabi
+كَمَثَلِ الْعَنْكَبُوتِ اتَّخَذَتْ بَيْتاً
+\lang english
+] and [
+\lang arabic_arabi
+مَثَلُهُمْ كَمَثَلِ الَّذِي اسْتَوْقَدَ نَاراً
+\lang english
+], this science are stated in the Qur'an in : [
+\lang arabic_arabi
+وَتِلْكَ الأَمْثَالُ نَضْرِبُهَا لِلنَّاسِ وَمَا يَعْقِلُهَا إِلاَّ الْعَالِمُون
+َ
+\lang english
+] - Spider,48.
+ 
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+[الزّركشي, --] 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Tafssīr : 
+\end_layout
+
+\begin_layout Standard
+Quran's Tafssīr are explaining its meanings and extracting its laws
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+ 
+\lang arabic_arabi
+الأحكام
+\lang english
+ 
+\end_layout
+
+\end_inset
+
+.
+ This requires the knowledge of causes of revelation, the grammatical analysis
+ of the Qur'an and other Qur'anic sciences.
+ 
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+[Bouziane, 06] 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section
 Computerization of the Qur'an
 \end_layout
 
