--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -676,8 +676,49 @@ Ontologies },
   publisher={\begin{Arabic}\raggedleft مجمع-اللغة-العربية-دمشق \end{Arabic}}
 }
 
-‫ِ
+@book{Sharaf04,
+  title={\begin{Arabic}\raggedleft ‫مصحف الصحابة في القراءات العشر المتواترة من طريق الشاطبية والدرة‬ \end{Arabic}},
+  author={Jamal Ad-Deen Muhammad Sharaf},
+  year={2004},
+  publisher={ Dar As-Sahaba lil-Turath }
+}
 
+@book{Tayyar08,
+  title={\begin{Arabic}\raggedleft ‫المحرر في علوم القرآن الكريم ‬ \end{Arabic}},
+  author={Musaid bin Sulaiman bin Naser Et-tayar},
+  year={2008},
+  publisher={ \begin{Arabic}\raggedleft مركز الدراسات والعلوم القرآنية بمعهد الإمام الشاطبي \end{Arabic} }
+}
+
+@book{Zerkashi,
+  title={\begin{Arabic}\raggedleft  ‫البرهان في علوم القرآن‬ \end{Arabic}},
+  author={Badreddine Mohammed bin Abdullah bin Bahader ez-zerkashi},
+}
+
+‫ِ
+@InProceedings{BRIERLEY12.240,
+  author = {Claire Brierley and Majdi Sawalha and Eric Atwell},
+  title = {Open-Source Boundary-Annotated Corpus for Arabic Speech and Language Processing},
+  booktitle = {Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)},
+  year = {2012},
+  month = {may},
+  date = {23-25},
+  address = {Istanbul, Turkey},
+  editor = {Nicoletta Calzolari (Conference Chair) and Khalid Choukri and Thierry Declerck and Mehmet Uğur Doğan and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
+  publisher = {European Language Resources Association (ELRA)},
+  isbn = {978-2-9517408-7-7},
+  language = {english}
+ } 
+
+@PHDTHESIS{BRIERLEY11.Phd,
+  author = {Claire Brierley},
+  title = {Prosody Resources and Symbolic Prosodic Features for Automated Phrase Break Prediction},
+  year = {2011},
+  month = {september},
+  school = {The University of Leeds,School of Computing},
+   
+  language = {english}
+ } 
 
 
 
