--- a/thesis/SA - Quran.lyx
+++ b/thesis/SA - Quran.lyx
@@ -113,6 +113,15 @@ pagenumbering{arabic}
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset CommandInset toc
+LatexCommand tableofcontents
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Chapter
 The Qur'an 
 \begin_inset CommandInset label
@@ -166,6 +175,29 @@ end{Arabic}
 \end_inset
 
 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Note Note
+status collapsed
+
+\begin_layout Plain Layout
+BEST show for AYAS [+] , font me_quran or arabeyesQr
+\end_layout
+
+\end_inset
+
+
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+Chapter, verse VS surah, ayah
 \end_layout
 
 \end_inset
@@ -321,7 +353,7 @@ The Mu'jam is a reference that contains information (subjects or words),
  a Qur'anic Mu'jam is any Mu'jam that its contents is based on Qur'an.
  
 \begin_inset Note Note
-status collapsed
+status open
 
 \begin_layout Plain Layout
 reference
@@ -361,7 +393,7 @@ The Qur'an consists of 114 surahs, the surahs are divided into ayahs.In mus'haf,
  This partitioning is the same since the first mus'haf, because the order
  of Surahs and ayahs is specified by the prophet
 \begin_inset Note Note
-status collapsed
+status open
 
 \begin_layout Plain Layout
 ref
@@ -1998,7 +2030,7 @@ key "Zerkashi"
 \begin_layout Subsection
 Science of allegorical
 \begin_inset Foot
-status open
+status collapsed
 
 \begin_layout Plain Layout
  
@@ -2298,7 +2330,7 @@ status open
  of the Qur'an and other Qur'anic sciences.
  
 \begin_inset Note Note
-status open
+status collapsed
 
 \begin_layout Plain Layout
 [Bouziane, 06] 
@@ -4550,7 +4582,7 @@ Projects of building indexes
 \end_layout
 
 \begin_layout Standard
-There are many Quranic indexes that vary in purpose : Syntaxic, Thematic,
+There are many Qur'anic indexes that vary in purpose : Syntaxic, Thematic,
  etc; But the problem is that most of them are printed, intended only for
  human reading, only a small part was released on computerized data storing
  format such as XML, Excel or as a database.
@@ -8451,7 +8483,7 @@ key "Corpus"
 
 \begin_layout Standard
 We will address the version available for download, it is in XML format
- and contains the following information:
+ and contains the following information :
 \end_layout
 
 \begin_layout Enumerate
@@ -8464,22 +8496,311 @@ The word in Othmani script (Unicode)
 
 \begin_layout Enumerate
 A coded expression that describes the word morphologically and grammatically
-\begin_inset Note Greyedout
-status open
-
-\begin_layout Enumerate
-, cette expression contient les tags suivants:
-\end_layout
-
-\begin_layout Enumerate
-details of tags / to do 
-\end_layout
+ 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "DUKES10.276"
 
 \end_inset
 
-
+:
 \end_layout
 
+\begin_deeper
+\begin_layout Enumerate
+Prefix features: 
+\series bold
+Al+ 
+\series default
+(determiner al),
+\series bold
+ bi+ 
+\series default
+(preposition bi), 
+\series bold
+ka+
+\series default
+ (preposition ka), 
+\series bold
+ta+ 
+\series default
+(preposition ta), 
+\series bold
+sa+
+\series default
+ (future particle sa)
+\series bold
+, ya+
+\series default
+ (vocative particle ya), 
+\series bold
+ha+ 
+\series default
+(vocative particle ha)
+\end_layout
+
+\begin_layout Enumerate
+letter alif as a prefixed particle: 
+\series bold
+A:INTG+
+\series default
+ (interrogative alif),
+\series bold
+ A:EQ+
+\series default
+ (equalization alif)
+\end_layout
+
+\begin_layout Enumerate
+letter waw as a prefixed particle: 
+\series bold
+wa+ 
+\series default
+(conjunction waw), 
+\series bold
+w:P+
+\series default
+ (preposition waw - used as a particle of oath)
+\end_layout
+
+\begin_layout Enumerate
+letter fa as a prefixed particle: 
+\series bold
+f:CONJ+
+\series default
+ (conjunction fa), 
+\series bold
+f:REM+
+\series default
+ (resumption fa),
+\series bold
+ f:CAUS+ 
+\series default
+(cause fa)
+\end_layout
+
+\begin_layout Enumerate
+letter lam as a prefixed particle: 
+\series bold
+l:P+
+\series default
+ (preposition lam), 
+\series bold
+l:EMPH+
+\series default
+ (enphasis lam),
+\series bold
+ l:PRP+
+\series default
+ (purpose lam)
+\series bold
+, l:IMPV+
+\series default
+ (imperative lam)
+\end_layout
+
+\begin_layout Enumerate
+root: 
+\series bold
+ROOT:
+\series default
+ (uses Buckwalter transliteration)
+\end_layout
+
+\begin_layout Enumerate
+lemma:
+\series bold
+ LEM:
+\series default
+ (uses Buckwalter transliteration)
+\end_layout
+
+\begin_layout Enumerate
+special:
+\series bold
+ SP:
+\series default
+ (used if the word belongs to a special group such as (
+\lang arabic_arabi
+كان وأخواتها
+\lang english
+).
+ Certain words in the corpus are tagged this way where this is relevant
+ for syntactic function, and not easily determined by lemma or part-of-speech;
+ for example, the particle ma (
+\lang arabic_arabi
+ما
+\lang english
+) in a negative sense can behave like the verb laysa (
+\lang arabic_arabi
+ليس
+\lang english
+) and place a predicate into the accusative case)
+\end_layout
+
+\begin_layout Enumerate
+person:
+\series bold
+ 1
+\series default
+ (first person), 
+\series bold
+2 
+\series default
+(second person), 
+\series bold
+3
+\series default
+ (third person)
+\end_layout
+
+\begin_layout Enumerate
+gender: 
+\series bold
+M
+\series default
+ (masculine), 
+\series bold
+F
+\series default
+ (feminine)
+\end_layout
+
+\begin_layout Enumerate
+number:
+\series bold
+ S
+\series default
+ (singular), 
+\series bold
+D
+\series default
+ (dual),
+\series bold
+ P
+\series default
+ (plural)
+\end_layout
+
+\begin_layout Enumerate
+aspect:
+\series bold
+ PERF
+\series default
+ (perfect), 
+\series bold
+IMPF
+\series default
+ (imperfect), 
+\series bold
+IMPV
+\series default
+ (imperative)
+\end_layout
+
+\begin_layout Enumerate
+mood: 
+\series bold
+IND
+\series default
+ (indicative),
+\series bold
+ SUBJ
+\series default
+ (subjunctive), 
+\series bold
+JUS 
+\series default
+(jussive), 
+\series bold
+ENG 
+\series default
+(energetic)
+\end_layout
+
+\begin_layout Enumerate
+voice: 
+\series bold
+ACT
+\series default
+ (active), 
+\series bold
+PASS
+\series default
+ (passive),
+\end_layout
+
+\begin_layout Enumerate
+verb form: 
+\series bold
+I
+\series default
+ to 
+\series bold
+XII
+\end_layout
+
+\begin_layout Enumerate
+derivation: 
+\series bold
+ACT PCPL
+\series default
+ (active participle), 
+\series bold
+PASS PCPL
+\series default
+ (passive participle), 
+\series bold
+VN
+\series default
+ (verbal noun)
+\end_layout
+
+\begin_layout Enumerate
+state:
+\series bold
+ DEF
+\series default
+ (definite), 
+\series bold
+INDEF
+\series default
+ (indefinite)
+\end_layout
+
+\begin_layout Enumerate
+case: 
+\series bold
+NOM
+\series default
+ (nominative), 
+\series bold
+ACC
+\series default
+ (accusative),
+\series bold
+ GEN
+\series default
+ (gentive)
+\end_layout
+
+\begin_layout Enumerate
+suffix features:
+\series bold
+ PRON: 
+\series default
+(attached pronoun, compound feature with person, gender and number), 
+\series bold
++VOC 
+\series default
+(vocative suffix for 
+\emph on
+Allahumma
+\emph default
+)
+\end_layout
+
+\end_deeper
 \begin_layout Standard
 \begin_inset Float table
 wide false
@@ -8870,7 +9191,7 @@ status open
 \begin_inset Caption
 
 \begin_layout Plain Layout
-Overview of morphology index – Arabic Quranic corpus
+Overview of morphology index – Quranic Arabic corpus
 \end_layout
 
 \end_inset
