--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -710,6 +710,20 @@ Ontologies },
   language = {english}
  } 
 
+@InProceedings{DUKES10.276,
+  author = {Kais Dukes and Nizar Habash},
+  title = {Morphological Annotation of Quranic Arabic},
+  booktitle = {Proceedings of the Seventh International Conference on Language Resources and Evaluation (LREC'10)},
+  year = {2010},
+  month = {may},
+  date = {19-21},
+  address = {Valletta, Malta},
+  editor = {Nicoletta Calzolari (Conference Chair) and Khalid Choukri and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis and Mike Rosner and Daniel Tapias},
+  publisher = {European Language Resources Association (ELRA)},
+  isbn = {2-9517408-6-7},
+  language = {english}
+ }
+
 @PHDTHESIS{BRIERLEY11.Phd,
   author = {Claire Brierley},
   title = {Prosody Resources and Symbolic Prosodic Features for Automated Phrase Break Prediction},
